--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import "../styles/global.css";
-import Footer from "../components/Footer.astro";
+import '../styles/global.css';
+import Footer from '../components/Footer.astro';
 export interface Props {
   title: string;
 }
@@ -8,29 +8,32 @@ export interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang='en'>
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXTYL0NDSZ"
+    <script async src='https://www.googletagmanager.com/gtag/js?id=G-JXTYL0NDSZ'
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "G-JXTYL0NDSZ");
+      gtag('config', 'G-JXTYL0NDSZ');
     </script>
-    <meta charset="UTF-8" />
+    <meta charset='UTF-8' />
     <meta
-      name="description"
-      content="Christine Witt is a a full-stack JavaScript developer with a penchant for front-end development."
+      name='description'
+      content='Christine Witt is a a full-stack JavaScript developer with a penchant for front-end development.'
     />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="generator" content={Astro.generator} />
+    <meta name='viewport' content='width=device-width' />
+    <link
+      rel='icon'
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👩🏻‍💻</text></svg>"
+    />
+    <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
